--- a/html/famous.html
+++ b/html/famous.html
@@ -13,6 +13,7 @@ HTML
     <link rel="icon" href="">
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.7.2/css/all.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/famous.css">
     <title>Document</title>
 </head>
@@ -51,7 +52,7 @@ HTML
                                   <p>
                                     流暢に話ができれば、それに越したことはありませんが、それは噺家さんや芸人さんなど一部のプロに任せておけばいい。私たちは、 相手の人にいかに自分が関心を寄せているかを伝えることが大事。
                                   </p>
-                                  <div class="more"><a href="../detailhtml/detail9割.html">詳細はこちら</a></div>
+                                  <div class="more"><a href="../detailhtml/detail9割.html">read more</a></div>
                                 </div>
                               </div>
                         </div>
@@ -163,8 +164,8 @@ HTML
                                オロオロしない
                             </h3>
                             <div class="readmore">
-                                <input id="readmore4" type="checkbox">
-                                <label for="readmore4"></label>
+                                <input id="readmore5" type="checkbox">
+                                <label for="readmore5"></label>
                                 <div class="readmore-content">
                                   <p>ここにコンテンツ内容を入力します。</p>
                                 </div>
@@ -191,8 +192,8 @@ HTML
                             オロオロしない
                             </h3>
                             <div class="readmore">
-                                <input id="readmore4" type="checkbox">
-                                <label for="readmore4"></label>
+                                <input id="readmore6" type="checkbox">
+                                <label for="readmore6"></label>
                                 <div class="readmore-content">
                                 <p>ここにコンテンツ内容を入力します。</p>
                                 </div>
