--- a/detailhtml/detail9割.html
+++ b/detailhtml/detail9割.html
@@ -13,6 +13,7 @@ HTML
     <link rel="icon" href="">
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.7.2/css/all.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../detailcss/detail9割.css">
     <title>Document</title>
 </head>
