--- a/html/famous.html
+++ b/html/famous.html
@@ -20,7 +20,7 @@ HTML
 <body>
     <header class="wrapper">
         <ul class="list">
-            <li><a href="#famous">famous</a></li>
+            <li><a href="#famous">トレンド</a></li>
             <li><a href="#best">おすすめ</a></li>
             <li><a href="#contact">お問い合わせ</a></li>
             <li><a href="#menu">メニュー</a></li>
